tests/failing/resolver/duplicate_symbols.out
tests/failing/resolver/duplicate_symbols.ri:3:9: error: duplicate object `x`
    |
  3 |     let x = 1;
    |         ^
tests/failing/resolver/duplicate_symbols.ri:12:1: error: duplicate object `L1`
     |
  12 | L1:
     | ^
tests/failing/resolver/duplicate_symbols.ri:15:9: error: duplicate object `L2`
     |
  15 |     let L2 = true;
     |         ^
tests/failing/resolver/duplicate_symbols.ri:19:13: error: duplicate object `L3`
     |
  19 |         let L3 = 1;
     |             ^
tests/failing/resolver/duplicate_symbols.ri:24:9: error: duplicate object `a`
     |
  24 |     let a = 1;
     |         ^
tests/failing/resolver/duplicate_symbols.ri:28:9: error: another symbol with this name already exists: `RuntimeError`
     |
  28 | errtype RuntimeError;
     |         ^
tests/failing/resolver/duplicate_symbols.ri:31:8: error: another symbol with this name already exists: `Gota`
     |
  31 | struct Gota { }
     |        ^
tests/failing/resolver/duplicate_symbols.ri:35:12: error: another symbol with this name already exists: `App`
     |
  35 |     struct App { }
     |            ^
tests/failing/resolver/duplicate_symbols.ri:42:9: error: field `art` is already declared
     |
  42 |         art: bool;
     |         ^
tests/failing/resolver/duplicate_symbols.ri:46:7: error: union `Obj` has duplicate variant type `i32`
     |
  46 | union Obj {
     |       ^
tests/failing/resolver/duplicate_symbols.ri:51:6: error: enum `State` has duplicate variant `Idle`
     |
  51 | enum State {
     |      ^
tests/failing/resolver/duplicate_symbols.ri:56:8: error: cannot extend non-local types
     |
  56 | extend module::Game { }
     |        ^
rivetc: error: could not compile package `duplicate_symbols`, aborting due to 12 previous errors.